Spacing in statistics fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,6 @@ p{
     text-align: center;
     max-width: 200px;
     color: #FDBB31;
-    padding-top: 2rem;
 }
 
 /* TRENDING PAGE */
